added about us page

--- a/EMR WEB UPD/index.html
+++ b/EMR WEB UPD/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/x-icon" href="/images/logo1.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/abt.css">
+    <link rel="stylesheet" href="theabt.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,6 +19,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anta&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <nav>
@@ -92,9 +94,9 @@
     </div>
      <div>
          <h3>Introduction </h3>
-         <p>The Hospital Management Committee approved the establishment of an Electronic Medical Records (EMR) Unit under the supervision of the Medical Director on the 12 th of July 2022, to strengthen the EMR implementation process and ensure its perfect adoption in the Centre. This unit is headed by Mr O.O Kehinde and supported by 18 other staff drawn from various departments including HIM, ICT, Accounts, Audit, Laboratory and Pharmacy among others. The Unit also has eight sub-unit for effective co-ordination of the unit....</p> <br>
+         <p>The Hospital Management Committee approved the establishment of an Electronic Medical Records (EMR) Unit under the supervision of the Medical Director on the 12 th of July 2022, to strengthen the EMR implementation process and ensure its perfect adoption in the Centre. This unit is headed by Dr O.O Kehinde and supported by 18 other staff drawn from various departments including HIM, ICT, Accounts, Audit, Laboratory and Pharmacy among others. The Unit also has eight sub-unit for effective co-ordination of the unit....</p> <br>
          <div class="read-more1">
-             <a href="about.html" >Read More</a>
+             <a href="theabt.html" >Read More</a>
          </div>
      
         </div>
