fixed the team and linked the pacs url

--- a/EMR WEB UPD/theabt.html
+++ b/EMR WEB UPD/theabt.html
@@ -27,11 +27,17 @@
         </div>
         <ul class="navlink">
             <li><a class="anta-regular" href="index.html"><i class="fa fa-home"></i>Home</a></li>
-            <li><a class="anta-regular" href="#"><i class="fa fa-user"></i>About</a></li>
+            <li><a class="anta-regular" href="#"><i class="fa fa-user"></i>About</a>
+                <div class="dropdown">
+                    <ul>
+                        <li><a class="anta-regular" href="theabt.html">who we are </a></li>
+                        <li><a class="anta-regular" href="#">The Team</a></li>
+                    </ul>
+                   </div></li></li>
             <li><a class="anta-regular" href="#"><i class="fa fa-clone"></i>Service</i></a>
                <div class="dropdown">
                 <ul>
-                    <li><a class="anta-regular" href="#">PACS System</a></li>
+                    <li><a class="anta-regular" href="https://techxploit.com.ng" target="_blank">PACS System</a></li>
                     <li><a class="anta-regular" href="#">Appointment</a></li>
                     <li><a class="anta-regular" href="#">Instant Service</a></li>
                     <li><a class="anta-regular" href="#">Training</a></li>
