--- a/EMR WEB UPD/contact.html
+++ b/EMR WEB UPD/contact.html
@@ -23,7 +23,15 @@
         </div>
         <ul class="navlink">
             <li><a class="anta-regular" href="index.html"><i class="fa fa-home"></i>Home</a></li>
-            <li><a class="anta-regular" href=""><i class="fa fa-user"></i>About</a></li>
+            <li><a class="anta-regular" href=""><i class="fa fa-user"></i>About</a>
+				<div class="dropdown">
+                    <ul>
+                        <li><a class="anta-regular" href="theabt.html">who we are </a></li>
+                        <li><a class="anta-regular" href="#">The Team</a></li>
+                    </ul>
+                   </div>
+				</li>
+				
             <li><a class="anta-regular" href=""><i class="fa fa-clone"></i>Service</i></a>
                <div class="dropdown">
                 <ul>
