--- a/EMR WEB UPD/index.html
+++ b/EMR WEB UPD/index.html
@@ -31,7 +31,7 @@
         </div>
         <ul class="navlink">
             <li><a class="anta-regular" href="index.html"><i class="fa fa-home"></i>Home</a></li>
-            <li><a class="anta-regular" href="#"><i class="fa fa-user"></i>About</a>
+            <li><a class="anta-regular" href="theabt.html"><i class="fa fa-user"></i>About</a>
                 <div class="dropdown">
                     <ul>
                         <li><a class="anta-regular" href="theabt.html">who we are </a></li>
