--- a/EMR WEB UPD/theabt.html
+++ b/EMR WEB UPD/theabt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="/images/logo1.png">
     <link rel="stylesheet" href="theabt.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -33,7 +34,8 @@
                         <li><a class="anta-regular" href="theabt.html">who we are </a></li>
                         <li><a class="anta-regular" href="#">The Team</a></li>
                     </ul>
-                   </div></li></li>
+                   </div>
+                </li>
             <li><a class="anta-regular" href="#"><i class="fa fa-clone"></i>Service</i></a>
                <div class="dropdown">
                 <ul>
